--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "csurf": "^1.11.0",
     "dompurify": "^3.0.8",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
